simplecart_container/service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: apache
  namespace: cart-cont
spec:
  ports:
  - port: 3000
    targetPort: 3000
    name: apache
  clusterIP: None
  selector:
    app: apache
