simplecart_container/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache
  labels:
    app: apache
  namespace: cart-cont
spec:
  ports:
  - port: 80
    targetPort: 80
    name: apache
  clusterIP: None
  selector:
    app: apache
